; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_locale-util.c_locale_variables_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_locale-util.c_locale_variables_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_VARIABLE_LC_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @locale_variables_free(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i64, align 8
  store i8** %0, i8*** %2, align 8
  %4 = load i64, i64* @_VARIABLE_LC_MAX, align 8
  %5 = load i8**, i8*** %2, align 8
  %6 = icmp ne i8** %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %25

8:                                                ; preds = %1
  store i64 0, i64* %3, align 8
  br label %9

9:                                                ; preds = %22, %8
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @_VARIABLE_LC_MAX, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %9
  %14 = load i8**, i8*** %2, align 8
  %15 = load i64, i64* %3, align 8
  %16 = getelementptr inbounds i8*, i8** %14, i64 %15
  %17 = load i8*, i8** %16, align 8
  %18 = call i8* @mfree(i8* %17)
  %19 = load i8**, i8*** %2, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i8*, i8** %19, i64 %20
  store i8* %18, i8** %21, align 8
  br label %22

22:                                               ; preds = %13
  %23 = load i64, i64* %3, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %3, align 8
  br label %9

25:                                               ; preds = %7, %9
  ret void
}

declare dso_local i8* @mfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
